Added featuredProducts page

--- a/homePage.html
+++ b/homePage.html
@@ -29,10 +29,10 @@
         <section class="categories">
             <h2>Categories</h2>
             <ol>
-                <li><a href="console.html" class="category-link">🎮 Console</a></li>
-                <li><a href="headset.html" class="category-link">🎧 Headset</a></li>
-                <li><a href="keyboard.html" class="category-link">⌨️ Keyboard</a></li>
-                <li><a href="gamepad.html" class="category-link">🕹️ Gamepad</a></li>
+                <li><a href="PlayStation.html" class="category-link">🎮 PlayStation</a></li>
+                <li><a href="Xbox.html" class="category-link">🎮 Xbox</a></li>
+                <li><a href="PC.html" class="category-link">⌨️ PC</a></li>
+                <li><a href="NintendoSwitch.html" class="category-link">🕹️ Nintendo Switch</a></li>
                 <li><a href="accessories.html" class="category-link">🛠️ Accessories</a></li>
             </ol>
         </section>
