--- a/homePage.html
+++ b/homePage.html
@@ -15,11 +15,18 @@
                 <li><a href="featuredProducts.html" class="nav-link">Featured Products</a></li>
                 <li><a href="categories.html" class="nav-link">Categories</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
+                <li><a href="cart.html" class="nav-link">Cart</a></li>
             </ul>
         </nav>
         <div class="search-bar">
-            <input type="text" placeholder="Search for games...">
-            <button id="searchButton">Search</button>
+            <select id="searchDropdown" onchange="location = this.value;">
+            <option value="homePage.html">Search for products...</option>
+            <option value="PlayStation.html">PlayStation</option>
+            <option value="Xbox.html">Xbox</option>
+            <option value="PC.html">PC</option>
+            <option value="NintendoSwitch.html">Nintendo Switch</option>
+            <option value="accessories.html">Accessories</option>
+            </select>
         </div>
     </header>
     <main>
