--- a/homePage.html
+++ b/homePage.html
@@ -36,11 +36,11 @@
         <section class="categories">
             <h2>Categories</h2>
             <ol>
-                <li><a href="PlayStation.html" class="category-link">🎮 PlayStation</a></li>
-                <li><a href="Xbox.html" class="category-link">🎮 Xbox</a></li>
-                <li><a href="PC.html" class="category-link">⌨️ PC</a></li>
-                <li><a href="NintendoSwitch.html" class="category-link">🕹️ Nintendo Switch</a></li>
-                <li><a href="accessories.html" class="category-link">🛠️ Accessories</a></li>
+                <li><a href="PlayStation.html" class="category-link" style="color: white;">🎮 PlayStation</a></li>
+                <li><a href="Xbox.html" class="category-link" style="color: white;">🎮 Xbox</a></li>
+                <li><a href="PC.html" class="category-link" style="color: white;">⌨️ PC</a></li>
+                <li><a href="NintendoSwitch.html" class="category-link" style="color: white;">🕹️ Nintendo Switch</a></li>
+                <li><a href="accessories.html" class="category-link" style="color: white;">🛠️ Accessories</a></li>
             </ol>
         </section>
     </main>
