Created subfolders for ease of access

--- a/src/frontend/featuredProducts.html
+++ b/src/frontend/featuredProducts.html
@@ -70,7 +70,7 @@
     <div class="page" id="page1">
         <section class="product" id="product1">
             <h2>The Last Of Us</h2>
-            <img src="images/1.jpg" alt="Product 1" width="200" height="200">
+            <img src="../../images/1.jpg" alt="Product 1" width="200" height="200">
             <p>The Last Of Us for Playstation.</p>
             <p>Price: $10.00</p>
             <button onclick="addToCart('The Last Of Us', 10.00)">Add to Cart</button>
