--- a/src/frontend/homePage.html
+++ b/src/frontend/homePage.html
@@ -51,23 +51,49 @@
         </div>
     </header>
     <main>
-        <h2>Featured Products</h2>
-        <section class="featured-products"> </section>
-
+        <section class="description"></section>
+            <h2>Welcome to GameVault</h2>
+            <p>GameVault is your ultimate destination for all things gaming. We offer a wide range of products including the latest games, consoles, and accessories for PlayStation, Xbox, PC, and Nintendo Switch. Explore our featured products, browse through various categories, and find the best deals on your favorite gaming gear. Whether you're a casual gamer or a hardcore enthusiast, GameVault has something for everyone. Join our community and stay updated with the latest trends and releases in the gaming world.</p>
+        </section><br>
         <section class="categories">
             <h2>Categories</h2>
-            <ol>
-                <li><a href="PlayStation.html" class="category-link" style="color: white;">🎮 PlayStation</a></li>
-                <li><a href="Xbox.html" class="category-link" style="color: white;">🎮 Xbox</a></li>
-                <li><a href="PC.html" class="category-link" style="color: white;">⌨️ PC</a></li>
-                <li><a href="NintendoSwitch.html" class="category-link" style="color: white;">🕹️ Nintendo Switch</a></li>
-                <li><a href="accessories.html" class="category-link" style="color: white;">🛠️ Accessories</a></li>
-            </ol>
+            <div class="category-grid">
+                <div class="category-item">
+                    <a href="PlayStation.html" class="category-link">
+                        <img src="../../images/playstation.jpg" alt="PlayStation">
+                        <span>PlayStation</span>
+                    </a>
+                </div>
+                <div class="category-item">
+                    <a href="Xbox.html" class="category-link">
+                        <img src="../../images/xbox.jpg" alt="Xbox">
+                        <span>Xbox</span>
+                    </a>
+                </div>
+                <div class="category-item">
+                    <a href="PC.html" class="category-link">
+                        <img src="../../images/pc.jpg" alt="PC">
+                        <span>PC</span>
+                    </a>
+                </div>
+                <div class="category-item">
+                    <a href="NintendoSwitch.html" class="category-link">
+                        <img src="../../images/nintendo.png" alt="Nintendo Switch">
+                        <span>Nintendo Switch</span>
+                    </a>
+                </div>
+                <div class="category-item">
+                    <a href="accessories.html" class="category-link">
+                        <img src="../../images/accessories.jpg" alt="Accessories">
+                        <span>Accessories</span>
+                    </a>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
         <p>&copy; 2025 GameVault. All rights reserved.</p>
     </footer>
-    <script src="homePage.js"></script>
+    <script src="../backend/homePage.js"></script>
 </body>
 </html>
