--- a/homePage.html
+++ b/homePage.html
@@ -35,8 +35,9 @@
                 <li><a href="homePage.html" class="nav-link">Home</a></li>
                 <li><a href="featuredProducts.html" class="nav-link">Featured Products</a></li>
                 <li><a href="categories.html" class="nav-link">Categories</a></li>
-                <li><a href="contact.html" class="nav-link">Contact</a></li>
+                <li><a href="login.html" class="nav-link">Login</a></li>
                 <li><a href="cart.html" class="nav-link">Cart</a></li>
+                <li><a href="login.html" class="nav-link" onclick="location.href='login.html'; return false;">Logout</a></li>
             </ul>
         </nav>
         <div class="search-bar">
