Added login lik to nav bar

--- a/src/frontend/homePage.html
+++ b/src/frontend/homePage.html
@@ -37,6 +37,7 @@
                 <li><a href="categories.html" class="nav-link">Categories</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
                 <li><a href="cart.html" class="nav-link">Cart</a></li>
+                <li><a href="login.html" class="nav-link">Login</a></li>
             </ul>
         </nav>
         <div class="search-bar">
