--- a/src/frontend/categories.html
+++ b/src/frontend/categories.html
@@ -53,56 +53,56 @@ window.onload = function() {
         <ul class="product-list">
             <li>
                 <h2>The Last Of Us</h2>
-                <img src="images/1.jpg" alt="The Last of Us" width="200" height="200">
+                <img src="../../images/1.jpg" alt="The Last of Us" width="200" height="200">
                 <p>The Last Of Us for Playstation.</p>
                 <p>Price: $10.00</p>
                 <button onclick="addToCart('The Last Of Us', 10.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>Uncharted Bundle</h2>
-                <img src="images/2.jpg" alt="Uncharted Bundle" width="200" height="200">
+                <img src="../../images/2.jpg" alt="Uncharted Bundle" width="200" height="200">
                 <p>Uncharted Bundle for Playstation.</p>
                 <p>Price: $20.00</p>
                 <button onclick="addToCart('Uncharted Bundle', 20.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>Spider-Man Miles Morales</h2>
-                <img src="images/4.jpg" alt="Spider-Man Miles Morales" width="200" height="200">
+                <img src="../../images/4.jpg" alt="Spider-Man Miles Morales" width="200" height="200">
                 <p>Action/Superhero by Insomniac for Playstation.</p>
                 <p>Price: $20.00</p>
                 <button onclick="addToCart('Spider-Man Miles Morales', 20.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>PS5 Controller</h2>
-                <img src="images/6.jpg" alt="PS5 Controller" width="200" height="200">
+                <img src="../../images/6.jpg" alt="PS5 Controller" width="200" height="200">
                 <p>PS5 Controller.</p>
                 <p>Price: $20.00</p>
                 <button onclick="addToCart('PS5 Controller', 20.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>Ghost of Tsushima</h2>
-                <img src="images/10.jpg" alt="Ghost of Tsushima" width="200" height="200">
+                <img src="../../images/10.jpg" alt="Ghost of Tsushima" width="200" height="200">
                 <p>RPG/Fighting by Sucker Punch Productions.</p>
                 <p>Price: $31.00</p>
                 <button onclick="addToCart('Ghost of Tsushima', 31.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>Shadow of the Colossus</h2>
-                <img src="images/14.jpg" alt="Shadow of the Colossus" width="200" height="200">
+                <img src="../../images/14.jpg" alt="Shadow of the Colossus" width="200" height="200">
                 <p>Action/Adventure by Japan Studio.</p>
                 <p>Price: $15.50</p>
                 <button onclick="addToCart('Shadow of the Colossus', 15.50)">Add to Cart</button>
             </li>
             <li>
                 <h2>Subnautica</h2>
-                <img src="images/16.jpg" alt="Subnautica" width="200" height="200">
+                <img src="../../images/16.jpg" alt="Subnautica" width="200" height="200">
                 <p>Survival/Adventure by Unknown Worlds Entertainment.</p>
                 <p>Price: $19.00</p>
                 <button onclick="addToCart('Subnautica', 19.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>Apex Legends</h2>
-                <img src="images/29.jpg" alt="Apex Legends" width="200" height="200">
+                <img src="../../images/29.jpg" alt="Apex Legends" width="200" height="200">
                 <p>FPS/Online by Respawn Entertainment.</p>
                 <p>Price: $14.00</p>
                 <button onclick="addToCart('Apex Legends', 14.00)">Add to Cart</button>
@@ -115,21 +115,21 @@ window.onload = function() {
         <ul class="product-list">
             <li>
                 <h2>Forza Horizon 4</h2>
-                <img src="images/12.jpg" alt="Forza Horizon 4" width="200" height="200">
+                <img src="../../images/12.jpg" alt="Forza Horizon 4" width="200" height="200">
                 <p>Racing by Microsoft.</p>
                 <p>Price: $38.00</p>
                 <button onclick="addToCart('Forza Horizon 4', 38.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>Halo</h2>
-                <img src="images/17.jpg" alt="Halo" width="200" height="200">
+                <img src="../../images/17.jpg" alt="Halo" width="200" height="200">
                 <p>Online/Shooter by Microsoft.</p>
                 <p>Price: $62.50</p>
                 <button onclick="addToCart('Halo', 62.50)">Add to Cart</button>
             </li>
             <li>
                 <h2>Xbox Controller (Camo)</h2>
-                <img src="images/28.jpg" alt="Xbox Controller (Camo)" width="200" height="200">
+                <img src="../../images/28.jpg" alt="Xbox Controller (Camo)" width="200" height="200">
                 <p>Controller.</p>
                 <p>Price: $21.05</p>
                 <button onclick="addToCart('Xbox Controller (Camo)', 21.05)">Add to Cart</button>
@@ -142,56 +142,56 @@ window.onload = function() {
         <ul class="product-list">
             <li>
                 <h2>GTA 6</h2>
-                <img src="images/3.jpg" alt="GTA 6" width="200" height="200">
+                <img src="../../images/3.jpg" alt="GTA 6" width="200" height="200">
                 <p>GTA 6 for PC.</p>
                 <p>Price: $20.00</p>
                 <button onclick="addToCart('GTA 6', 20.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>Five Nights at Freddys</h2>
-                <img src="images/7.jpg" alt="Five Nights at Freddys" width="200" height="200">
+                <img src="../../images/7.jpg" alt="Five Nights at Freddys" width="200" height="200">
                 <p>Horror/Indie by Scott Cawthon.</p>
                 <p>Price: $30.00</p>
                 <button onclick="addToCart('Five Nights at Freddys', 30.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>Valorant</h2>
-                <img src="images/9.jpg" alt="Valorant" width="200" height="200">
+                <img src="../../images/9.jpg" alt="Valorant" width="200" height="200">
                 <p>FPS/Shooting by Riot Games.</p>
                 <p>Price: $7.00</p>
                 <button onclick="addToCart('Valorant', 7.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>Dead by Daylight</h2>
-                <img src="images/11.jpg" alt="Dead by Daylight" width="200" height="200">
+                <img src="../../images/11.jpg" alt="Dead by Daylight" width="200" height="200">
                 <p>Horror/Online by Behaviour Interactive.</p>
                 <p>Price: $21.00</p>
                 <button onclick="addToCart('Dead by Daylight', 21.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>Captain Claw</h2>
-                <img src="images/19.jpg" alt="Captain Claw" width="200" height="200">
+                <img src="../../images/19.jpg" alt="Captain Claw" width="200" height="200">
                 <p>Platform by Monolith Productions.</p>
                 <p>Price: $81.00</p>
                 <button onclick="addToCart('Captain Claw', 81.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>RGB Keyboard</h2>
-                <img src="images/24.jpg" alt="RGB Keyboard" width="200" height="200">
+                <img src="../../images/24.jpg" alt="RGB Keyboard" width="200" height="200">
                 <p>Keyboard.</p>
                 <p>Price: $99.00</p>
                 <button onclick="addToCart('RGB Keyboard', 99.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>Final Fantasy XIV</h2>
-                <img src="images/25.jpg" alt="Final Fantasy XIV" width="200" height="200">
+                <img src="../../images/25.jpg" alt="Final Fantasy XIV" width="200" height="200">
                 <p>Online/RPG by Square Enix.</p>
                 <p>Price: $18.40</p>
                 <button onclick="addToCart('Final Fantasy XIV', 18.40)">Add to Cart</button>
             </li>
             <li>
                 <h2>Blair Witch</h2>
-                <img src="images/27.jpg" alt="Blair Witch" width="200" height="200">
+                <img src="../../images/27.jpg" alt="Blair Witch" width="200" height="200">
                 <p>Horror/RPG by Bloober Team.</p>
                 <p>Price: $14.00</p>
                 <button onclick="addToCart('Blair Witch', 14.00)">Add to Cart</button>
@@ -204,49 +204,49 @@ window.onload = function() {
         <ul class="product-list">
             <li>
                 <h2>Mario Bros Kart</h2>
-                <img src="images/5.jpg" alt="Mario Bros Kart" width="200" height="200">
+                <img src="../../images/5.jpg" alt="Mario Bros Kart" width="200" height="200">
                 <p>Mario Bros Kart Racing for Nintendo Switch.</p>
                 <p>Price: $20.00</p>
                 <button onclick="addToCart('Mario Bros Kart', 20.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>Midtown Madness</h2>
-                <img src="images/13.jpg" alt="Midtown Madness" width="200" height="200">
+                <img src="../../images/13.jpg" alt="Midtown Madness" width="200" height="200">
                 <p>Racing by Angel Studios.</p>
                 <p>Price: $23.25</p>
                 <button onclick="addToCart('Midtown Madness', 23.25)">Add to Cart</button>
             </li>
             <li>
                 <h2>Mario Smash Bros</h2>
-                <img src="images/15.jpg" alt="Mario Smash Bros" width="200" height="200">
+                <img src="../../images/15.jpg" alt="Mario Smash Bros" width="200" height="200">
                 <p>Fighting by Nintendo.</p>
                 <p>Price: $17.45</p>
                 <button onclick="addToCart('Mario Smash Bros', 17.45)">Add to Cart</button>
             </li>
             <li>
                 <h2>Monopoly for Nintendo</h2>
-                <img src="images/20.jpg" alt="Monopoly for Nintendo" width="200" height="200">
+                <img src="../../images/20.jpg" alt="Monopoly for Nintendo" width="200" height="200">
                 <p>Family by Nintendo.</p>
                 <p>Price: $10.00</p>
                 <button onclick="addToCart('Monopoly for Nintendo', 10.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>Donkey Kong</h2>
-                <img src="images/26.jpg" alt="Donkey Kong" width="200" height="200">
+                <img src="../../images/26.jpg" alt="Donkey Kong" width="200" height="200">
                 <p>Platform by Nintendo.</p>
                 <p>Price: $89.65</p>
                 <button onclick="addToCart('Donkey Kong', 89.65)">Add to Cart</button>
             </li>
             <li>
                 <h2>Switch Controller (Blue)</h2>
-                <img src="images/21.jpg" alt="Switch Controller (Blue)" width="200" height="200">
+                <img src="../../images/21.jpg" alt="Switch Controller (Blue)" width="200" height="200">
                 <p>Controller.</p>
                 <p>Price: $21.00</p>
                 <button onclick="addToCart('Switch Controller (Blue)', 21.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>Luigis Mansion</h2>
-                <img src="images/23.jpg" alt="Luigis Mansion" width="200" height="200">
+                <img src="../../images/23.jpg" alt="Luigis Mansion" width="200" height="200">
                 <p>Horror/Family by Nintendo.</p>
                 <p>Price: $18.00</p>
                 <button onclick="addToCart('Luigis Mansion', 18.00)">Add to Cart</button>
@@ -259,21 +259,21 @@ window.onload = function() {
         <ul class="product-list">
             <li>
                 <h2>Freddy Plushie</h2>
-                <img src="images/8.jpg" alt="Freddy Plushie" width="200" height="200">
+                <img src="../../images/8.jpg" alt="Freddy Plushie" width="200" height="200">
                 <p>Plushie.</p>
                 <p>Price: $40.00</p>
                 <button onclick="addToCart('Freddy Plushie', 40.00)">Add to Cart</button>
             </li>
             <li>
                 <h2>Need For Speed Poster</h2>
-                <img src="images/18.jpg" alt="Need For Speed Poster" width="200" height="200">
+                <img src="../../images/18.jpg" alt="Need For Speed Poster" width="200" height="200">
                 <p>Poster.</p>
                 <p>Price: $9.20</p>
                 <button onclick="addToCart('Need For Speed Poster', 9.20)">Add to Cart</button>
             </li>
             <li>
                 <h2>Vegeta Action Figure</h2>
-                <img src="images/22.jpg" alt="Vegeta Action Figure" width="200" height="200">
+                <img src="../../images/22.jpg" alt="Vegeta Action Figure" width="200" height="200">
                 <p>Dragon Ball Action Figure.</p>
                 <p>Price: $14.00</p>
                 <button onclick="addToCart('Vegeta Action Figure', 14.00)">Add to Cart</button>
