Fixed folder structure

--- a/src/frontend/login.html
+++ b/src/frontend/login.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
+            background-color: rgb(14, 68, 82);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -27,14 +27,14 @@
         }
         .login-container input[type="text"],
         .login-container input[type="password"] {
-            width: 100%;
+            width: 95%;
             padding: 10px;
             margin: 10px 0;
             border: 1px solid #ccc;
             border-radius: 4px;
         }
         .login-container button {
-            width: 100%;
+            width: 102%;
             padding: 10px;
             background-color: #4CAF50;
             color: white;
